--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,7 +15,7 @@ fraction = "0.15.3"
 itertools = "0.13.0"
 lalrpop-util = { version = "0.20.2", features = ["lexer"] }
 ndarray = "0.15.6"
-ndarray-linalg = { version = "0.16.0", features = ["intel-mkl-static"] }
+# ndarray-linalg = { version = "0.16.0", features = ["intel-mkl-static"] }
 num = "0.4.3"
 num-integer = "0.1.46"
 num-traits = "0.2.19"
@@ -26,7 +26,7 @@ rand_distr = "0.4.3"
 serde = { version = "1.0", features = ["derive"] }
 serde_yaml = "0.9.33"
 statrs = "0.17.1"
-symbolica = "0.8.0"
+# symbolica = "0.8.0"
 regex = "1.11.1"
 
 [dependencies.pyo3]
